--- a/bio.html
+++ b/bio.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
+
 <html lang="en">
-
-
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -25,8 +23,16 @@
     <link rel="stylesheet" href="css/set1.css">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css">
+	<!-- Main CSS -->
+    <link rel="stylesheet" href="css/set3.css">
+	<!-- Shortcut icon -->
 	<link rel="shortcut icon" type="image/jpg" href="/LOGO.jpg" />
 	
+	<style>
+	
+	
+	
+	</style>
 </head>
 
 <body>
@@ -86,32 +92,33 @@
     </div>
 	
     <section class="slider d-flex">
-  
-  
-        <div class="container">
-		
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-12">
+	
+				<div class="col-md-12">
+				<!-- Centra el objeto -->
                     <div class="slider-title_box">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="slider-content_wrap">
+						<!-- Coloca en una determinada posicion el contenedor -->
+                            <div class="col-md-12"> 							
 								<br/><br/><br/><br/><br/>
-                                    <h4>SKIPPERS</h4>
-                                    <h6>Biografia</h6>
-									<br/><br/>
-									<p> Dios los creó y el alcohol los juntó.</p>
-                                </div>
+                                   <h4>SKIPPERS</h4>
+                                   <h6>Biografia</h6>
+								   <br/><br/>			
+
+								   <!-- <img class="imagendefondo" src="images/pergamino.jpg" >	 -->
+								   <p class="textodelante">  Skippers es una banda de Punk-Rock cordobesa cuyas raíces nos trasladan a 2018 Cuando Pablo Hats (El galgo de Andújar). </p>			
+
                             </div>
-                        </div>
                     </div>
                 </div>
-            </div>
-        </div> 
-		
-	
+ 
     </section>
+				
+<div style="text-align: center; font-size: 60px; border: 1px solid red;">
 	
+</div>	
+
+	
+	
+
 	
 	
  
